--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,6 @@ spring:
         git:
           uri: https://github.com/miuteo/catalogservice-config
           default-label: main
+          timeout: 5
+          clone-on-start: true
+          force-pull: true
