--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ server:
     threads:
       max: 50
       min-spare: 5
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
 
 spring:
   application:
